finalized CRUD for clients components

--- a/developpements/packages/web-client/src/components/clientsListComponents/ClientsListComponent.scss
+++ b/developpements/packages/web-client/src/components/clientsListComponents/ClientsListComponent.scss
@@ -1,7 +1,7 @@
 .actif {
-  background-color: rgba(59, 104, 219, 0.977);
+  color: rgba(59, 104, 219, 0.977);
 }
 
 .inactif {
-  background-color: rgb(255, 0, 21);
+  color: rgb(255, 0, 21);
 }
